--- a/meet-the-toolkit.qmd
+++ b/meet-the-toolkit.qmd
@@ -3,6 +3,9 @@ title: "hw-00: Meet the Toolkit"
 author: "Violeta Keifer"
 format: html
 editor: visual
+execute: 
+  echo: false
+  warning: false
 ---
 
 ```{r setup, include=FALSE}
